Add generating points

--- a/src/main/webapp/resources/css/errorPage.css
+++ b/src/main/webapp/resources/css/errorPage.css
@@ -10,7 +10,7 @@ body {
     margin: auto;
     display: grid;
 }
-#imagine {
+.imagine {
     alignment: center;
     width: 100%;
     height: 100%;
