--- a/src/main/webapp/templates/picture.xhtml
+++ b/src/main/webapp/templates/picture.xhtml
@@ -8,7 +8,7 @@
 <body>
 <ui:composition>
     <div id="svg-picture">
-        <svg id="svg" width="210" height="210" xmlns="http://www.w3.org/2000/svg">
+        <svg id="svg" width="210" height="210" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <polygon points="180,100 100,20 100,100"
                      class="svg-figure-color"
                      stroke-width="2"></polygon>
